dropdown menu added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@ window.onscroll = function() {
 <body>
     <a id="top"></a>
     <div class="options">
-        
+        <img src="icons/horizontal.png" alt="menu" class="options-icon">
+        <div class="options-content">
+            <a href="index-nl.html"><img src="icons/circle.png" alt="language" class="language-icon"></a>
+            <a href="projects.html">Projects</a>
+            <a href="info.html">info</a>
+            <a href="contact.html">Contact</a>
+            <a href="https://github.com/ThomasClarisse/about-me-rework">github</a>
+
+        </div>
     </div>
     
 </body>
