updated the pages, see readme.md for more information

--- a/index-nl.html
+++ b/index-nl.html
@@ -54,7 +54,7 @@ window.onscroll = function() {
     <div class="certificates">
         <h2 style="text-align: center; padding-top: 20px;">certificaten</h2>
         <br>
-        <b class="cetrificates-desc">Tot nu toe heb ik de volgende certificaten behaalt:</b>
+        <h3 class="cetrificates-desc">Tot nu toe heb ik de volgende certificaten behaalt:</h3>
 
         <div class="certificate-item">
             <b>php beginner</b>
