--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ window.onscroll = function() {
     <div class="certificates">
         <h2 style="text-align: center; padding-top: 20px;">Certificates</h2>
         <br>
-        <b class="cetrificates-desc">So far i have obtained the following certificates:</b>
+        <h3 class="cetrificates-desc">So far i have obtained the following certificates:</h3>
 
         <div class="certificate-item">
             <b>php beginner</b>
