--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info</title>
+    <title>Information</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,6 +20,63 @@ window.onscroll = function() {
 
 <body>
 <a id="top"></a>
-    
+
+<div class="options">
+        <img src="icons/horizontal.png" alt="menu" class="options-icon">
+        <div class="options-content">
+            <a href="info-nl.html"><img src="icons/circle.png" alt="language" class="language-icon"></a>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+            <a href="https://github.com/ThomasClarisse/about-me-rework">github</a>
+        </div>
+    </div>
+
+    <h1>Information</h1>
+    <div class="info-content" id="who">
+        <h2>Who I am</h2>
+        <b>A short introduction</b>
+        <p>My name is Thomas. I'm 18 years old and I study Software Development at ROC Midden Nederland.</p>
+        <b>Where I'm based</b>
+        <p>I'm from the Netherlands — born in Utrecht and raised there until around age seven or eight, when my mother and I moved to a small town in the countryside where we still live.</p>
+        <b>Why software development?</b>
+        <p>I enjoy working with computers. I spend a lot of my free time on my PC — playing games and experimenting with mods — and that led me to programming. After high school I briefly started learning to become a car mechanic, but after about 1.5 years I decided it wasn't for me and switched to software development. Since then I've been learning web technologies like HTML, CSS, PHP and SQL, and I have been enjoying the learning process.</p>
+    </div>
+    <br><br>
+    <div class="info-content" id="journey">
+        <h2>My journey into tech</h2>
+        <b>How it began</b>
+        <p>I've always been interested in electronics and computers. My first gaming experiences were on a Wii, later I used an older Windows 7 laptop to experiment with modding. At 16 I bought a second-hand PC and upgraded it over time, that experience deepened my interest in modding and coding.</p>
+        <b>What keeps me motivated</b>
+        <p>Seeing my progress as i work keeps me motivated: when I build a website and refresh to see changes, that immediate feedback is satisfying. I also enjoy problem solving, debugging and finding solutions is rewarding, and the idea of doing work I enjoy motivates me.</p>
+    </div>
+    <br><br>
+    <div class="info-content" id="skills">
+        <h2>Skills and interests</h2>
+        <b>Technologies I enjoy</b>
+        <p>I find web development with HTML, CSS and PHP especially interesting. Turning a plain white and black page into something interactive and visually appealing feels powerful. CSS in particular lets you give a site character and life.</p>
+        <b>Preferences</b>
+        <p>I personally prefer frontend work, I enjoy building the visual side with HTML and CSS more than backend tasks, although I find backend topics like PHP and SQL interesting as well. In the future I'd like to explore game development and desktop apps.</p>
+        <b>Hobbies</b>
+        <p>Outside of coding I'm fascinated by military technology and aviation, especially military aircraft. I also enjoy playing video games, some of my favourites include Forza Horizon, GTA V and Red Dead Redemption 2.</p>
+    </div>
+    <br><br>
+    <div class="info-content" id="goals">
+        <h2>Goals</h2>
+        <b>Short term</b>
+        <p>In the short term I want to finish my education and obtain my diploma. After that I'd like to work in web development and continue improving my skills, including learning JavaScript and C.</p>
+        <b>Longer term / dream projects</b>
+        <p>I have a few dream projects: one is a platform for developers to share projects and get feedback (something this site could evolve into). I'd also like to build a game or a mobile app one day.</p>
+    </div>
+    <br><br>
+    <div class="info-content" id="contact">
+        <h2>Contact and links</h2>
+        <b>How to reach me</b>
+        <p>If you'd like to know more or give feedback, please use the contact page. You can also find links to my GitHub and LinkedIn on the contact page.</p>
+    </div>
+    <br><br>
+
+
+<img src="icons/arrow.png" alt="back to top" id="myBtn" onclick="location.href='#top'">
 </body>
 </html>
